--- a/lovelace/reveils.yaml
+++ b/lovelace/reveils.yaml
@@ -23,7 +23,37 @@ cards:
                   - entity: input_boolean.wake_up_work_light
                     state: 'on'
                 row:
+                  entity: input_number.wake_up_work_light_shift_start_time
+              - type: conditional
+                conditions:
+                  - entity: input_boolean.wake_up_work_light
+                    state: 'on'
+                row:
                   entity: input_number.wake_up_work_light_max_brightness
+              - type: conditional
+                conditions:
+                  - entity: input_boolean.wake_up_work_light
+                    state: 'on'
+                row:
+                  type: custom:html-template-card
+                  ignore_line_breaks: false
+                  always_update: false
+                  do_not_parse: false
+                  content: >-
+                    La lumière commencera à s'allumer à {{
+                    (((state_attr('input_datetime.wake_up_work_time',
+                    'timestamp') | int) +
+                    ((states('input_number.wake_up_work_light_shift_start_time')
+                    | int) * 60)) | timestamp_custom('%H:%M', True)) }} pour
+                    atteindre une luminiosité maximale de {{
+                    states('input_number.wake_up_work_light_max_brightness') |
+                    int}}% à {{
+                    (((state_attr('input_datetime.wake_up_work_time',
+                    'timestamp') | int) +
+                    ((states('input_number.wake_up_work_light_shift_start_time')
+                    | int * 60 ) +
+                    (states('input_number.wake_up_work_light_time_transition') |
+                    int) * 60)) | timestamp_custom('%H:%M', True)) }}
               - type: divider
                 style:
                   height: 1px
@@ -38,6 +68,18 @@ cards:
                     state: 'on'
                 row:
                   entity: input_select.wake_up_work_playlist
+              - type: conditional
+                conditions:
+                  - entity: input_boolean.wake_up_work_music
+                    state: 'on'
+                row:
+                  entity: input_number.wake_up_work_music_volume_transition
+              - type: conditional
+                conditions:
+                  - entity: input_boolean.wake_up_work_music
+                    state: 'on'
+                row:
+                  entity: input_number.wake_up_work_music_max_volume
               - type: divider
                 style:
                   height: 1px
@@ -77,7 +119,37 @@ cards:
                   - entity: input_boolean.wake_up_occasional_light
                     state: 'on'
                 row:
+                  entity: input_number.wake_up_occasional_light_shift_start_time
+              - type: conditional
+                conditions:
+                  - entity: input_boolean.wake_up_occasional_light
+                    state: 'on'
+                row:
                   entity: input_number.wake_up_occasional_light_max_brightness
+              - type: conditional
+                conditions:
+                  - entity: input_boolean.wake_up_occasional_light
+                    state: 'on'
+                row:
+                  type: custom:html-template-card
+                  ignore_line_breaks: false
+                  always_update: false
+                  do_not_parse: false
+                  content: >-
+                    La lumière commencera à s'allumer à {{
+                    (((state_attr('input_datetime.wake_up_occasional_time',
+                    'timestamp') | int) +
+                    ((states('input_number.wake_up_occasional_light_shift_start_time')
+                    | int) * 60)) | timestamp_custom('%H:%M', True)) }} pour
+                    atteindre une luminiosité maximale de {{
+                    states('input_number.wake_up_occasional_light_max_brightness')
+                    | int}}% à {{
+                    (((state_attr('input_datetime.wake_up_occasional_time',
+                    'timestamp') | int) +
+                    ((states('input_number.wake_up_occasional_light_shift_start_time')
+                    | int * 60 ) +
+                    (states('input_number.wake_up_occasional_light_time_transition')
+                    | int) * 60)) | timestamp_custom('%H:%M', True)) }}
               - type: divider
                 style:
                   height: 1px
@@ -92,6 +164,18 @@ cards:
                     state: 'on'
                 row:
                   entity: input_select.wake_up_occasional_playlist
+              - type: conditional
+                conditions:
+                  - entity: input_boolean.wake_up_occasional_music
+                    state: 'on'
+                row:
+                  entity: input_number.wake_up_occasional_music_volume_transition
+              - type: conditional
+                conditions:
+                  - entity: input_boolean.wake_up_occasional_music
+                    state: 'on'
+                row:
+                  entity: input_number.wake_up_occasional_music_max_volume
               - type: divider
                 style:
                   height: 1px
