--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 __pycache__/
-/secrets.yaml
 /custom_components
 /known_devices.yaml
 /.storage
@@ -14,7 +13,16 @@ __pycache__/
 /custom_components/
 /tts/
 /themes/
-*.yaml
+# *.yaml
 /appdaemon
 .HA_VERSION
-*.*
+# *.*
+
+### Packages
+/config/packages/security/
+/config/packages/sandbox/
+/config/packages/*/mrm/
+
+### Secrets
+secrets.yaml
+
